css/styles.css
body {
    font-family: 'Roboto', sans-serif;
    color: #434455;
    background-color: #ffffff;
}

a {
    text-decoration: none;
}

ul {
    list-style: none;
}

.logo {
    font-family: 'Raleway', sans-serif;
    font-weight: 700;
    font-size: 18px;
    line-height: 1.17;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: #4d5ae5;
}

.logo-part {
    color: #2e2f42;
}

.menu-link {
    font-weight: 500;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #2e2f42;
}

.menu-link:hover,
.menu-link:focus {
    color: #404bbf;
}

.contacts {
    font-style: normal;
}

.contacts-link {
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #434455;
}

.contacts-link:hover,
.contacts-link:focus {
    color: #404bbf;
}

.hero {
    background-color: #2e2f42;
}

.hero-title {
    font-size: 56px;
    line-height: 1.07;
    text-align: center;
    letter-spacing: 0.02em;
    color: #ffffff;
}

.hero-btn {
    background-color: #4d5ae5;
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
    line-height: 1.5;
    letter-spacing: 0.04em;
    color: #ffffff;
    cursor: pointer;
}

.hero-btn:hover,
.hero-btn:focus {
    background-color: #404bbf;
}

.features-subtitle,
.team-name,
.portfolio-title {
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: #2e2f42;
}

.features-text,
.team-text,
.portfolio-text,
.footer-text {
    line-height: 1.5;
    letter-spacing: 0.02em;
}

.team {
    background-color: #f4f4fd;
}

.section-title {
    font-size: 36px;
    line-height: 1.11;
    text-align: center;
    letter-spacing: 0.02em;
    text-transform: capitalize;
    color: #2e2f42;
}

.team-item {
    background-color: #ffffff;
}

.footer {
    background-color: #2e2f42;
}

.footer-logo {
    color: #4d5ae5;
}

.footer-logo-part {
    color: #f4f4fd;
}

.footer-text {
    color: #f4f4fd;
}
.menu-link {
    font-size: 16px;
}

.contacts-link {
    font-size: 16px;
}

.hero-btn {
    font-size: 16px;
}

.features-text,
.team-text,
.portfolio-text,
.footer-text {
    font-size: 16px;
}

